--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <a class="nav-link js-scroll-trigger" href="#me">Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link contact js-scroll-trigger" href="#">Contact</a>
             </li>
           </ul>
         </div>
